--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 .idea
-/summac/summac/datasets/*
-/summac/nltk_data/
+1. multi-GPU-training-with-accelerator/summac/summac/datasets/*
+1. multi-GPU-training-with-accelerator/summac/nltk_data/
+1. multi-GPU-training-with-accelerator/summac/summac/*.bin
+1. multi-GPU-training-with-accelerator/summac/*.bin
+**/__pycache__
+
+
+2. pre-train-with-bart-text-infilling/datasets/*
+2. pre-train-with-bart-text-infilling/models/*
