add report to wandb in 2.bart

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -45,10 +45,15 @@
                 "--dataset_name", "bookcorpus",
                 "--cache_dir", "2. pre-train-with-bart-text-infilling/datasets",
                 "--model_name_or_path","facebook/bart-base",
-                "--max_train_data", "10000",
-                "--max_eval_data", "100",
-                "--per_device_train_batch_size", "2",
-                "--per_device_eval_batch_size", "1",
+                "--output_dir", "2. pre-train-with-bart-text-infilling/models/ckpt",
+                "--max_train_data", "100000",
+                "--max_eval_data", "1000",
+                "--with_tracking",
+                "--report_to", "wandb",
+                "--log_interval", "100",
+                "--checkpointing_steps", "1000",
+                "--per_device_train_batch_size", "4",
+                "--per_device_eval_batch_size", "2",
                 "--model_dir", "2. pre-train-with-bart-text-infilling/models",
                 "--max_seq_length", "256",
                 "--mlm_probability", "0.0",
@@ -118,7 +123,7 @@
             "console": "integratedTerminal",
             "justMyCode": false,
             "args": [
-                "./3. Self-Attention with Relative Position Representations/fairseq/examples/translation/data-bin/iwslt14.tokenized.de-en",
+                "3. Self-Attention with Relative Position Representations/fairseq/examples/translation/data-bin/iwslt14.tokenized.de-en",
                 "--arch",
                 "transformer_iwslt_de_en",
                 "--share-decoder-input-output-embed",
